--- a/Algorithm/baekjun_quiz.ipynb
+++ b/Algorithm/baekjun_quiz.ipynb
@@ -40,6 +40,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "year = input('연도: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
