--- a/Algorithm/Recursion.ipynb
+++ b/Algorithm/Recursion.ipynb
@@ -96,6 +96,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 재귀를 사용한 별 찍기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "***\n* *\n***\n"
+    }
+   ],
+   "source": [
+    "def stars(star_lst):\n",
+    "    new_star_lst = []\n",
+    "    for i in range(3 * len(star_lst)):\n",
+    "        if i // len(star_lst) == 1:\n",
+    "            new_star_lst.append(star_lst[i % len(star_lst)] + \" \" * len(star_lst) + star_lst[i % len(star_lst)])\n",
+    "        else:\n",
+    "            new_star_lst.append(star_lst[i % len(star_lst)] * 3)\n",
+    "    return list(new_star_lst)\n",
+    "\n",
+    "star = [\"***\", \"* *\", '***']\n",
+    "n = int(input())\n",
+    "k = 0\n",
+    "while n != 3:\n",
+    "    n = int(n / 3)\n",
+    "    k += 1\n",
+    "\n",
+    "for i in range(k):\n",
+    "    star = stars(star)\n",
+    "for i in star:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "7\n1 3\n1 2\n3 2\n1 3\n2 1\n2 3\n1 3\n"
+    }
+   ],
+   "source": [
+    "def hanoi_movement(n, a, b, c):\n",
+    "    if n == 1:\n",
+    "        movement.append((a, c))\n",
+    "    else:\n",
+    "        hanoi_movement(n-1, a, c, b)\n",
+    "        movement.append((a, c))\n",
+    "        hanoi_movement(n-1, b, a, c)\n",
+    "\n",
+    "n = int(input())\n",
+    "movement = []\n",
+    "hanoi_movement(n, 1, 2, 3)\n",
+    "\n",
+    "print(len(movement))\n",
+    "for move in movement:\n",
+    "    print(move[0], move[1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -114,12 +188,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.7-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594616904277",
-   "display_name": "Python 3.7.7 64-bit ('base': conda)"
+   "name": "python37664bitbaseconda7ccc1197ea424c04aa8e970980241a68",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
